--- a/home.css
+++ b/home.css
@@ -101,7 +101,7 @@ section {
 /* header */
 
 #header {
-  background: linear-gradient(to left, rgba(0, 0, 0, 0), #5e151a 65%),
+  background: linear-gradient(to left, rgba(0, 0, 0, 0), #5e151a 100%),
     url("./assets/20190406_151339.JPEG");
   background-size: cover;
   background-position: center;
@@ -125,7 +125,7 @@ section {
   font-size: 112px;
 }
 .header__subtitle {
-  color: #fdca40;
+  color: #f3eff5;
   font-size: 72px;
 }
 
@@ -189,6 +189,8 @@ section {
   text-shadow: 1px 1px 2px white;
   transition: all 200ms ease;
 }
+
+
 
 .service__btn {
   z-index: 5;
@@ -553,16 +555,16 @@ textarea::placeholder {
 }
 
 .leaves i:nth-of-type(n) {
-  -webkit-animation-delay: 1.9s;
+  -webkit-animation-delay: 0.0s;
 }
 .leaves i:nth-of-type(2n) {
-  -webkit-animation-delay: 3.9s;
+  -webkit-animation-delay: 1.9s;
 }
 .leaves i:nth-of-type(3n) {
-  -webkit-animation-delay: 2.3s;
+  -webkit-animation-delay: 1.3s;
 }
 .leaves i:nth-of-type(4n) {
-  -webkit-animation-delay: 4.4s;
+  -webkit-animation-delay: 2.4s;
 }
 .leaves i:nth-of-type(5n) {
   -webkit-animation-delay: 5s;
@@ -658,3 +660,18 @@ textarea::placeholder {
     opacity: 0;
   }
 }
+
+/* birthday */
+
+canvas {
+  /* overflow-y: hidden;
+  overflow-x: hidden; */
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  opacity: 0;
+}
+
+
